--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,105 @@
-.App {
-  text-align: center;
+.sidebar {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 100;
+    padding: 48px 0 0;
+    box-shadow: inset -1px 0 0 rgba(0, 0, 0, 0.1);
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@media (max-width: 767.98px) {
+    .sidebar {
+        top: 5rem;
+    }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.sidebar-sticky {
+    position: relative;
+    top: 0;
+    height: calc(100vh - 48px);
+    padding-top: 0.5rem;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.sidebar .nav-link {
+    font-size: 18px;
+    font-weight: 500;
+    background-color: rgba(62, 75, 91, 0.2);
+    color: #3e4b5b;
+    border-color: rgba(62, 75, 91, 0);
+    margin: 10px 0;
+    border-radius: 5px;
+}
+.sidebar .nav-link:hover {
+    color: #ffffff;
+    background-color: #3e4b5b;
+    border-color: #3e4b5b;
+}
+.sidebar .nav-link .feather {
+    margin-right: 4px;
+    color: #727272;
 }
 
-.App-link {
-  color: #61dafb;
+.sidebar .nav-link.active {
+    color: #ffffff;
+    background-color: #3e4b5b;
+    border-color: #3e4b5b;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.sidebar .nav-link:hover .feather,
+.sidebar .nav-link.active .feather {
+    color: inherit;
 }
+
+.sidebar-heading {
+    font-size: 0.75rem;
+    text-transform: uppercase;
+}
+
+.input-field {
+    border: 0;
+    width: 100%;
+    padding: 10px 20px;
+    border-radius: 10px;
+    background-color: white;
+}
+.add-btn{
+    border: 1px solid #3e4b5b;
+    background-color: #3e4b5b;
+    color: white;
+}
+
+.add-btn:hover{
+    border: 1px solid #3e4b5b;
+    background-color: transparent;
+    color: black;
+}
+
+.update-btn{
+    border: 1px solid #198754;
+    background-color: #198754;
+    color: white;
+}
+.update-btn:hover{
+    border: 1px solid #198754;
+    background-color: transparent;
+    color: #198754;
+}
+
+.delete-btn{
+    border: 1px solid #DC3545;
+    background-color: #DC3545;
+    color: white;
+}
+.delete-btn:hover{
+    border: 1px solid #DC3545;
+    background-color: transparent;
+    color: #DC3545;
+}
+
+
+/*  */
